--- a/src/css/consultaEncargos.css
+++ b/src/css/consultaEncargos.css
@@ -140,7 +140,7 @@ span.s-time {
 span.f-time {
     font-size: 0.8vw;
   }
-.botonNuevoPedido {
+.botonNuevoEncargo {
     background-color:#ffffff;
 	border-radius:40%;
 	border:1px solid #000000;
@@ -157,38 +157,7 @@ span.f-time {
     
     }
 
-.botonNuevoMaterial {
-    background-color:#ffffff;
-	border-radius:40%;
-	border:1px solid #000000;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-family:Arial;
-	font-size:1vw;
-	padding:1% 1%;
-	text-decoration:none;
-    position: absolute;
-    top:23%;
-    left:14.6%;
-    
-    }
-.botonNuevoProveedor {
-    background-color:#ffffff;
-	border-radius:40%;
-	border:1px solid #000000;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-family:Arial;
-	font-size:1vw;
-	padding:1% 1%;
-	text-decoration:none;
-    position: absolute;
-    top:23%;
-    left:25%;
-    
-    }
+
 .buttonAtras {
     background-color:#413c3c;
 	border-radius:40%;
@@ -263,7 +232,7 @@ table.blueTable {
     left:67%;
     color: white;
 }
-.botonPedidos{
+.botonEncargos{
     background-color:#ffffff;
 	border:1px solid #000000;
 	display:inline-block;
@@ -277,34 +246,7 @@ table.blueTable {
     top:40%;
     left:5%;
 }
-.botonMateriales{
-    background-color:#ffffff;
-	border:1px solid #000000;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-family:Arial;
-	font-size:1vw;
-	padding:1% 3.5%;
-	text-decoration:none;
-    position: absolute;
-    top:50%;
-    left:5%;
-}
-.botonProveedores{
-    background-color:#ffffff;
-	border:1px solid #000000;
-	display:inline-block;
-	cursor:pointer;
-	color:#000000;
-	font-family:Arial;
-	font-size:1vw;
-	padding:1% 3%;
-	text-decoration:none;
-    position: absolute;
-    top:60%;
-    left:5%;
-}
+
 
 .consulta {
 	font: 700 1em Tahoma, Arial, Verdana, sans-serif;
