--- a/src/css/consultaPDP.css
+++ b/src/css/consultaPDP.css
@@ -140,7 +140,7 @@ span.s-time {
 span.f-time {
     font-size: 0.8vw;
   }
-.botonNuevoPedido {
+.botonNuevaClinica {
     background-color:#ffffff;
 	border-radius:40%;
 	border:1px solid #000000;
@@ -157,7 +157,7 @@ span.f-time {
     
     }
 
-.botonNuevoMaterial {
+.botonNuevoPaciente {
     background-color:#ffffff;
 	border-radius:40%;
 	border:1px solid #000000;
@@ -173,7 +173,7 @@ span.f-time {
     left:14.6%;
     
     }
-.botonNuevoProveedor {
+.botonNuevoProducto {
     background-color:#ffffff;
 	border-radius:40%;
 	border:1px solid #000000;
@@ -263,7 +263,7 @@ table.blueTable {
     left:67%;
     color: white;
 }
-.botonPedidos{
+.botonClinicas{
     background-color:#ffffff;
 	border:1px solid #000000;
 	display:inline-block;
@@ -277,7 +277,7 @@ table.blueTable {
     top:40%;
     left:5%;
 }
-.botonMateriales{
+.botonPacientes{
     background-color:#ffffff;
 	border:1px solid #000000;
 	display:inline-block;
@@ -291,7 +291,7 @@ table.blueTable {
     top:50%;
     left:5%;
 }
-.botonProveedores{
+.botonProductos{
     background-color:#ffffff;
 	border:1px solid #000000;
 	display:inline-block;
@@ -299,7 +299,7 @@ table.blueTable {
 	color:#000000;
 	font-family:Arial;
 	font-size:1vw;
-	padding:1% 3%;
+	padding:1% 3.5%;
 	text-decoration:none;
     position: absolute;
     top:60%;
