--- a/src/css/consultaPDP.css
+++ b/src/css/consultaPDP.css
@@ -362,8 +362,8 @@ table.blueTable {
 /* Mensajes de Error */
 div.error {
 	color : red;	
-	border : 2px solid red;
-	padding : 10px;
-    margin: 10px;
     z-index: 1;
+    position: absolute;
+    top: 5%;
+    left: 30%;
 }
