--- a/src/css/formPaciente.css
+++ b/src/css/formPaciente.css
@@ -213,3 +213,11 @@ input[type=submit] {
     color: red;
 }
 
+/* Mensajes de Error */
+div.error {
+	color : red;	
+    z-index: 1;
+    position: absolute;
+    top: 5%;
+    left: 30%;
+}
