--- a/src/css/formMaterial.css
+++ b/src/css/formMaterial.css
@@ -213,3 +213,9 @@ input[type=submit] {
     color: red;
 }
 
+div.error {
+	color : red;	
+    z-index: 1;
+    position: absolute;
+    left: 30%;
+}
