--- a/src/css/consultaFacturas.css
+++ b/src/css/consultaFacturas.css
@@ -257,3 +257,10 @@ table.blueTable {
 	overflow: visible; 
 	padding: 3px 8px 2px 6px; 
 }
+
+div.error {
+	color : red;	
+    z-index: 1;
+    position: absolute;
+    left: 30%;
+}
