--- a/src/css/log.css
+++ b/src/css/log.css
@@ -64,13 +64,28 @@ body{
     cursor:pointer;
     color:#ffffff;
     font-family:Arial;
-    font-size:1vw;
-    padding:1% 2%;
+    font-size:0.5vw;
+    padding:0.5% 1.4%;
     text-decoration:none;
     position: absolute;
     left:87.5%;
     top:43%;
 }
+.botonBorrar{
+  background-color:rgb(167, 67, 67);
+  border-radius:23%;
+  border:1px solid #ffffff;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:0.5vw;
+  padding:0.5% 1.3%;
+  text-decoration:none;
+  position: absolute;
+  left:87.5%;
+  top:60%;
+  }
 .acerca{
   color: turquoise;
   font-family: sans-serif;
